# hyperliquid-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  backend-sidecar.spec  bot.py  check_position.py  config.py  dashboard.py  debug_balance.py  debug_unified.py  discover_markets.py  engine.py  pyproject.toml  requirements.txt  setup.ps1  test_setup.py  test_trade.py
.github/workflows/: build-windows.yml  ci.yml
backend/: __init__.py  main.py
backend/api/: analog.py  audit.py  backtest.py  balances.py  bootstrap.py  candles.py  credentials.py  diagnostics.py  etrade.py  fred.py  health.py  killswitch.py  logs.py  markets.py  markups.py  models.py  news.py  notes.py  orders.py  outcomes.py  plaid.py  research.py  settings.py  slots.py  squawk.py  stream.py  universe.py  vault.py  wallet.py
backend/config/: credentials_seed.example.json
backend/db/: __init__.py  app_db.py  duckdb_catalog.py  parquet_reader.py  parquet_writer.py  paths.py  schemas.py
backend/db/migrations/: 001_initial.sql  002_markups.sql  003_orders.sql  004_models.sql  005_notes.sql  006_credentials.sql  007_balances.sql  008_plaid.sql  __init__.py  migrate.py
backend/models/: __init__.py  audit.py  backtest.py  candles.py  market.py  markup.py  order.py  outcomes.py  slot.py
backend/services/: __init__.py  audit.py  backfill_service.py  balances_store.py  credentials_seed.py  credentials_store.py  data_updater.py  etrade_service.py  exposure_cap.py  hl_user_state.py  key_vault.py  kill_switch.py  live_exchange.py  live_market.py  macro_seed.py  markup_store.py  notes_store.py  order_executor.py  order_repository.py  order_service.py  outcome_slot_runner.py  plaid_service.py  plaid_store.py  preset_slots.py  settings_store.py  shadow_client.py  slot_repository.py  slot_runner.py  source_router.py  stream_hub.py  telegram_squawk.py  trade_engine_service.py  universe_manager.py  wallet.py
backend/services/analog/: __init__.py  engine.py
backend/services/backtest/: __init__.py  engine.py  result.py  shim.py  walker.py
backend/services/ml/: __init__.py  cv.py  features.py  labels.py  ml_strategy.py  registry.py  trainer.py
backend/services/research/: __init__.py  studies.py
backend/services/sources/: __init__.py  alphavantage_source.py  base.py  binance_source.py  coinbase_source.py  coingecko_source.py  cryptocompare_source.py  fred_source.py  hip3_map.py  hyperliquid_source.py  outcome_source.py  yfinance_source.py
backend/tools/: __init__.py  backfill.py  bootstrap_lake.py
core/: __init__.py  email_notifier.py  exchange.py  market_data.py  news_monitor.py  outcome_client.py  outcome_monitor.py  pricing_model.py  risk_manager.py  telegram_notifier.py
docs/: building.md  getting_started.md  install.md  publishing_releases.md
gui/: __init__.py  chart_widget.py  components.py  dashboard_tab.py  help_tab.py  log_tab.py  news_tab.py  predictions_tab.py  settings_tab.py  sidebar.py  theme.py
internal_docs/: Changelog.txt  Design.md  OVERHAUL_PLAN.md  PHASE_1_DATA_PLATFORM.md  PHASE_2_BACKEND_ENGINE.md  PHASE_5p5_TO_12_PLAN.md  trading_flow_audit.md  trading_presets.md
scripts/: build_windows.ps1  run_preset_bench.py  sidecar_entry.py  sync_to_windows.sh  testnet_faucet.py
strategies/: __init__.py  base.py  bb_fade.py  breakout.py  connors_rsi2.py  ema_crossover.py  factory.py  funding_dip.py  gap_fill.py  keltner_reversion.py  outcome_arb.py  rsi_mean_reversion.py  williams_mean_rev.py
tests/: conftest.py
tests/live/: test_live_sources.py
tests/unit/backend/: test_health.py
tests/unit/engine/: test_engine.py
tests/unit/strategies/: test_breakout.py  test_ema_crossover.py  test_factory.py  test_funding_dip.py  (+1 more)
todo/: path_to_v1.md
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/binaries/: .gitkeep
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: .gitkeep
ui/src-tauri/src/: lib.rs  main.rs  sidecar.rs
ui/src/api/: types.ts  (+2 more)
(+81 files in other folders)
