[project]
name = "hyperliquid-bot"
version = "0.2.0"
description = "Automated trading bot for Hyperliquid (perps + HIP-3 + HIP-4)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
    "live: hits real public data-provider APIs (run with -m live)",
]

[tool.ruff]
line-length = 110
target-version = "py312"

# Legacy codebase — not yet audited or migrated. Each phase of the overhaul
# refactors one area; when a file is touched, it comes out of this list and
# starts getting lint-checked. New code (backend/, tests/, ui/) is checked.
extend-exclude = [
    "bot.py",
    "dashboard.py",
    "config.py",
    "check_position.py",
    "debug_balance.py",
    "debug_unified.py",
    "discover_markets.py",
    "test_setup.py",
    "test_trade.py",
    "core/",
    "strategies/",
    "gui/",
    "scripts/",
]
# engine.py is new — explicitly included by being outside extend-exclude.

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.ruff.lint.isort]
known-first-party = ["engine", "strategies", "core", "backend", "config"]
