[package]
name = "hyperliquid-bot"
version = "0.2.0"
description = "Hyperliquid trading bot — desktop shell."
authors = ["keatonpeterson138-glitch"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hyperliquid_bot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ``devtools`` keeps Inspect (Ctrl+Shift+I) available in release builds —
# needed for remote diagnostics when users hit 404s without a way to tell
# us which URL is failing.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
